# Design-Patterns---Labels-hw

src/: CMakeLists.txt
src/labels/: CapitalizeText.cpp  CapitalizeText.h  CompositeDecorator.cpp  CompositeDecorator.h  CompositeTransform.cpp  CompositeTransform.h  CustomLabel.cpp  CustomLabel.h  Label.h  LabelDecorator.cpp  LabelDecorator.h  LabelWithHelp.cpp  LabelWithHelp.h  RandomLabelDecorator.cpp  RandomLabelDecorator.h  Replace.cpp  Replace.h  RichLabel.cpp  RichLabel.h  SimpleLabel.cpp  SimpleLabel.h  TransformText.h
test/: test-library.cpp
